--- a/src/app/components/video-highlights/video-highlights.component.scss
+++ b/src/app/components/video-highlights/video-highlights.component.scss
@@ -39,6 +39,17 @@
     overflow: hidden;
   }
 
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.4s;
+
+    .videos__card:hover & {
+      transform: scale(1.05);
+    }
+  }
+
   &__placeholder {
     width: 100%;
     height: 100%;
@@ -112,6 +123,10 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
+
+    @media (max-width: $breakpoint-mobile) {
+      padding: 1rem;
+    }
   }
 
   &__modal-content {
